teams/team-riker/dev/templates/echoapp/echoservice_plugin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: kong
  annotations:
    konghq.com/plugins: "echo-auth"
spec:
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
  - port: 80
    name: low
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo
