teams/team-riker/dev/templates/echoapp/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: "add-response-header"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /echo
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port: 
              number: 80
