teams/team-riker/dev/templates/echoapp/demo-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-redirect
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /redirect
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port: 
              number: 80
