teams/team-riker/dev/templates/echoapp/fallback-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fallback
  namespace: kong
  annotations:
spec:
  ingressClassName: kong
  defaultBackend:
    service:
      name: fallback-svc
      port:
        number: 80
